[tool.poetry]
name = "wikiconv-sort"
version = "0.1.0"
description = ""
authors = ["nicolatoscan <nicolatoscan99@outlook.it>"]

[tool.poetry.dependencies]
python = "^3.8"
arrow = "^1.0.2"
decorator = "^4.4.2"
docopt = "^0.6.2"
fuzzywuzzy = "^0.18.0"
jsonable = "^0.3.1"
Mako = "^1.1.4"
MarkupSafe = "^1.1.1"
mediawiki-utilities = "^0.4.18"
more-itertools = "^8.7.0"
mwcites = "^0.2.0"
mwcli = "^0.0.3"
mwparserfromhell = "^0.6"
mwtypes = "^0.3.2"
mwxml = "^0.3.3"
networkx = "^2.5"
para = "^0.0.8"
PyMySQL = "^1.0.2"
python-dateutil = "^2.8.1"
python-Levenshtein = "^0.12.2"
regex = "^2020.11.13"
requests = "^2.25.1"
typing = "^3.7.4"
compressed-stream = {git = "https://github.com/CristianCantoro/compressed_stream.git", rev = "master"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
